# FR-IQA-Algo

./: .dockerignore  .gitignore  .vercelignore  Dockerfile  HOWTO.md  LICENSE  README.md  fly.toml  pyproject.toml  render.yaml  requirements.txt  train_aggregation.py  train_uncertainty.py  upiqal_cli.py  vercel.json
api/: proxy.py
deploy/hf_space/: README.md  deploy.sh
docs/examples/upiqal_output/: report.json
eval/: __init__.py  datasets.py  mos_correlation.py
scripts/: download_kadid10k.py
tests/: test_composite_overlay.py  test_mos_correlation.py  test_noise_blur_heuristics.py  test_ranking_loss.py  test_spec_deviations.py  test_uncertainty_training.py  test_upiqal.py
upiqal/: __init__.py  color.py  features.py  heuristics.py  model.py  normalize.py  suss_train.py  uncertainty.py
web/: main.py  mock_upiqal.py
web/public/: index.html  paper.html
web/public/static/css/: app.css  paper.css  tokens.css
web/public/static/js/: app.js  motion.js  paper.js
web/templates/: index.html
weights/: L_cholesky_blockdiag.pth  download_vgg16.py
